test/tools/router_check/test/config/ComprehensiveRoutes.yaml
virtual_hosts:
- name: www2_host
  domains:
  - www.lyft.com
  routes:
  - match:
      prefix: /new_endpoint
    route:
      cluster: www2
      prefix_rewrite: /api/new_endpoint
  - match:
      path: /
    route:
      cluster: root_www2
  - match:
      prefix: /
    route:
      cluster: www2
  virtual_clusters:
  - headers:
    - name: :path
      safe_regex_match:
        google_re2: {}
        regex: ^/users/\d+$
    - name: :method
      exact_match: PUT
    name: update_user
